--- a/projects/ui/paginator/examples/material-theme-coverage/skins-coverage.component.scss
+++ b/projects/ui/paginator/examples/material-theme-coverage/skins-coverage.component.scss
@@ -1,5 +1,6 @@
 @use '@angular/material' as mat;
 @use '@cngx/themes/material/paginator-theme.scss' as paginator;
+@use '@cngx/themes/material/ripple-theme.scss' as ripple;
 
 $palette: (
   theme-type: light,
@@ -28,6 +29,7 @@ html {
 
   // CNGX Material bridge
   @include paginator.theme($theme);
+  @include ripple.theme($theme);
 
   background: var(--mat-sys-background);
   color: var(--mat-sys-on-background);
